--- a/cmake/adrianConfig.cmake.in
+++ b/cmake/adrianConfig.cmake.in
@@ -1,3 +1,10 @@
 @PACKAGE_INIT@
 
+include(CMakeFindDependencyMacro)
+find_dependency(ads)
+find_dependency(ez)
+find_dependency(immer)
+find_dependency(madronalib)
+find_dependency(readerwriterqueue)
+
 include("${CMAKE_CURRENT_LIST_DIR}/adrianTargets.cmake")
