--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,14 @@ target_sources(adrian INTERFACE
 		include/adrian-catch-buffer.hpp
 		include/adrian-chain.hpp
 		include/adrian-concepts.hpp
+		include/adrian-flags.hpp
 		include/adrian-ids.hpp
 		include/adrian-messages.hpp
 		include/adrian-model.hpp
 		include/adrian-peak-gate.hpp
 		include/adrian-pp.hpp
 		include/adrian-ui-events.hpp
+		include/adrian-vocab.hpp
 )
 target_compile_features(adrian INTERFACE cxx_std_20)
 target_link_libraries(adrian INTERFACE
@@ -43,7 +45,7 @@ if (ADRIAN_BUILD_TESTS)
 	add_subdirectory(test)
 endif()
 include(CMakePackageConfigHelpers)
-install(TARGETS adrian EXPORT adrianTargets FILE_SET HEADERS)
+install(TARGETS adrian EXPORT adrianTargets FILE_SET HEADERS DESTINATION include/adrian)
 install(EXPORT adrianTargets FILE adrianTargets.cmake NAMESPACE adrian:: DESTINATION lib/cmake/adrian)
 configure_package_config_file(
     "${CMAKE_CURRENT_LIST_DIR}/cmake/adrianConfig.cmake.in"
