--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ set(immer_BUILD_DOCS     OFF CACHE BOOL "immer: Build docs")
 set(immer_BUILD_EXTRAS   OFF CACHE BOOL "immer: Build extras")
 find_package(ads REQUIRED CONFIG)
 find_package(ez REQUIRED CONFIG)
-find_package(immer REQUIRED CONFIG)
+find_package(Immer REQUIRED CONFIG)
 find_package(madronalib REQUIRED CONFIG)
 find_package(readerwriterqueue REQUIRED CONFIG)
 add_library(adrian INTERFACE)
