--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,8 +5,5 @@ list(APPEND adrian-test-src
 	src/main.cpp
 )
 add_executable(adrian-test ${adrian-test-src})
-if (NOT TARGET adrian::adrian)
-	set (ADRIAN_BUILD_TESTS OFF CACHE BOOL "" FORCE)
-	add_subdirectory(../.. adrian)
-endif()
 target_link_libraries(adrian-test adrian::adrian)
+add_test(NAME adrian-test COMMAND adrian-test)
